add: adaptive in 800px

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <!-- ---STYLES_--- -->
     <link rel="stylesheet" href="./styles/reset.css">
+    
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/adaptive.css">
     <title>DCS wiki</title>
 </head>
 
