--- a/pages/missiles/missiles.html
+++ b/pages/missiles/missiles.html
@@ -1,99 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ---GOOGLE--FONTS---- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- ---GOOGLE--FONTS---- -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap" rel="stylesheet">
+    <!-- ---STYLES_--- -->
+    <link rel="stylesheet" href="../../styles/reset.css" />
+<link rel="stylesheet" href="../../styles/styles.css" />
+    
+    <link rel="stylesheet" href="missiles-style.css" />
+    <link rel="stylesheet" href="..//../styles/adaptive.css" />
 
-  <!-- ---STYLES_--- -->
+    <title>Missiles</title>
+  </head>
 
-  <link rel="stylesheet" href="../../styles/reset.css">
-  <link rel="stylesheet" href="../../styles/styles.css">
-  <link rel="stylesheet" href="missiles-style.css">
-  <title>Missiles</title>
-
-</head>
-
-<body>
-  <div class="container">
-    <header>
-      <div class="header-container">
-        <a class="logo-block" href="../../index.html">
-          <h2 class="logo-title">DCS wiki</h2>
-          <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
-
-        </a>
-        <nav class="navigation">
-          <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
-          </ul>
-        </nav>
-
-      </div>
-
-    </header>
-    <!-- --MAIN---- -->
-    <section class="main-section">
-      <div class="main-container">
-        <div class="main-inner">
-          <article class="main-list">
-            <h3 class="missiles-list-title">missiles NATO</h3>
-            <ul class="nato-missiles-list">
-              <li class="missile-item">aim 120</li>
-              <li class="missile-item">aim 120b</li>
-              <li class="missile-item">aim 120c</li>
-              <li class="missile-item">AIM-7М Sparrow</li>
-              <li class="missile-item">sidewinder</li>
+  <body>
+    <div class="container">
+      <header>
+        <div class="header-container">
+          <a class="logo-block" href="../../index.html">
+            <h2 class="logo-title">DCS wiki</h2>
+            <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
+          </a>
+          <nav class="navigation">
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Settings</a>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacts</a>
+              </li>
             </ul>
-             
-            <h3 class="missiles-list-title">missiles russia</h3>
-            <ul class="russia-missiles-list">
+          </nav>
+        </div>
+      </header>
+      <!-- --MAIN---- -->
+      <section class="main-section">
+        <div class="main-container">
+          <div class="main-inner">
+            <article class="main-list">
+              <h3 class="missiles-list-title">missiles NATO</h3>
+              <ul class="nato-missiles-list">
+                <li class="missile-item">aim 120</li>
+                <li class="missile-item">aim 120b</li>
+                <li class="missile-item">aim 120c</li>
+                <li class="missile-item">aim-7</li>
+                <li class="missile-item">aim-9</li>
+              </ul>
 
-              <li class="missile-item">p 60</li>
-              <li class="missile-item">er 27t</li>
-              <li class="missile-item">er 27e</li>
-              <li class="missile-item">p 73</li>
-              <li class="missile-item">er 27t</li>
-            </ul>
-
-          </article>
-          <div class="main-content">
-            <iframe src="" frameborder="0" id="main-iframe"></iframe>
-
+              <h3 class="missiles-list-title">missiles russia</h3>
+              <ul class="russia-missiles-list">
+                <li class="missile-item">p 60</li>
+                <li class="missile-item">er 27t</li>
+                <li class="missile-item">er 27e</li>
+                <li class="missile-item">p 73</li>
+                <li class="missile-item">er 27t</li>
+              </ul>
+            </article>
+            <div class="main-content">
+              <iframe src="" frameborder="0" id="main-iframe"></iframe>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- --FOOTER---- -->
+      <footer class="footer">
+        <div class="footer-container">
+          <a class="logo-block" href="../../index.html">
+            <h2 class="logo-title">DCS wiki</h2>
+            <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
+          </a>
 
-    </section>
-    <!-- --FOOTER---- -->
-    <footer class="footer">
-      <div class="footer-container">
-        <a class="logo-block" href="../../index.html">
-          <h2 class="logo-title">DCS wiki</h2>
-          <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
+          <span class="copyright">Copyright 2022</span>
+        </div>
+      </footer>
+    </div>
 
-        </a>
-
-        <span class="copyright">Copyright 2022</span>
-      </div>
-
-    </footer>
-  </div>
-  <!-- ----HEADER---- -->
-
-
-  <!-- --JQUERY-SCRIPTS--- -->
-  <!-- <script src="../../jquery/jquery-3.6.1.js"></script>
-    <script src="../../jquery/jquery-ui.js"></script> -->
-  <script src="../../js/script.js"></script>
-  <script src="../../js/missiles-reducer.js"></script>
-</body>
-
+    <script src="../../js/script.js"></script>
+    <script src="../../js/missiles-reducer.js"></script>
+  </body>
 </html>
