feat:edit styles.css and missiles-style.css

--- a/pages/missiles/missiles.html
+++ b/pages/missiles/missiles.html
@@ -60,7 +60,7 @@
               <h3 class="missiles-list-title">missiles russia</h3>
               <ul class="russia-missiles-list">
                 <li class="missile-item">p 60</li>
-                <li class="missile-item">er 27t</li>
+                <li class="missile-item">r 27</li>
                 <li class="missile-item">er 27e</li>
                 <li class="missile-item">p 73</li>
                 <li class="missile-item">er 27t</li>
